--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vercel/blob": "^0.27.0",
+    "bcryptjs": "^3.0.3",
     "better-auth": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
