--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^16.1.6",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.2.4",
     "react-day-picker": "^9.13.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.54.0",
     "react-player": "^2.16.0",
     "recharts": "^2.15.0",
