--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.474.0",
     "next": "^16.1.6",
+    "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.4",
     "react-day-picker": "^9.13.1",
     "react-dom": "^19.2.4",
