--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.28",
     "@better-auth/stripe": "^1.4.18",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.10.0",
+    "@openrouter/ai-sdk-provider": "^2.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.0",
@@ -40,6 +42,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vercel/blob": "^0.27.0",
+    "ai": "^6.0.85",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.0",
