--- a/package.json
+++ b/package.json
@@ -69,11 +69,13 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@noble/hashes": "^2.0.1",
     "autoprefixer": "^10.4.0",
     "drizzle-kit": "^0.31.9",
     "eslint": "^8.0.0",
     "eslint-config-next": "15.1.6",
     "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.19"
+    "tailwindcss": "^3.4.19",
+    "tsx": "^4.21.0"
   }
 }
